--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div id="rodape">
 
-                Todos os direitos reservados
+                Todos os direitos reservados@
 
             </div>
 
