Criação da página jogos

--- a/jogos.html
+++ b/jogos.html
@@ -19,8 +19,8 @@
 
             <div id="area-menu">
 
-                <a href="#">Home</a> 
-                <a href="jogos.html">Jogos</a> 
+                <a href="index.html">Home</a> 
+                <a href="#">Jogos</a> 
                 <a href="celulares.html">Celulares</a>
                 <a href="informatica.html">informática</a> 
                 <a href="eletronicos.html">Eletronicos</a>
@@ -35,30 +35,7 @@
                 <!-- abertura postagem-->
                 <div class="postagem">
 
-                    <h2>Titulo da postagem 1</h2>
-                    <span class="data-postagem">postado em ...</span>
-                    <img src="Imagens/imagem1.jpg" class="imagem-postagem">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                    </p>
-                    <a href="">Leia mais</a>
-                    <!-- fechamento postagem-->
-                </div>
-                <!-- abertura postagem-->
-                <div class="postagem">
 
-                    <h2>Titulo da postagem 2</h2>
-                    <span class="data-postagem">postado em ...</span>
-                    <img src="Imagens/imagem2.jpg" class="imagem-postagem">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since the 1500s, when an unknown printer took a galley
-                    </p>
-                    <a href="">Leia mais</a>
-                    <!-- fechamento postagem-->
                 </div>
 
             </div>
