--- a/jogos.html
+++ b/jogos.html
@@ -30,12 +30,34 @@
         </div>
 
         <div id="area-principal">
-
             <div id="area-postagens">
                 <!-- abertura postagem-->
                 <div class="postagem">
 
+                    <h2>Titulo da postagem 1</h2>
+                    <span class="data-postagem">postado em ...</span>
+                    <img src="Imagens/imagem1.jpg" class="imagem-postagem">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                    <a href="">Leia mais</a>
+                    <!-- fechamento postagem-->
+                </div>
+                <!-- abertura postagem-->
+                <div class="postagem">
 
+                    <h2>Titulo da postagem 2</h2>
+                    <span class="data-postagem">postado em ...</span>
+                    <img src="Imagens/imagem2.jpg" class="imagem-postagem">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer took a galley
+                    </p>
+                    <a href="">Leia mais</a>
+                    <!-- fechamento postagem-->
                 </div>
 
             </div>
